Add color editor support