@@ -22,6 +22,11 @@ java {
 
 List<String> runArgs = [
         "--add-exports", "javafx.graphics/com.sun.javafx.scene=com.jfoenix",
+        "--add-exports", "javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+        "--add-exports", "javafx.base/com.sun.javafx.binding=com.jfoenix",
+        "--add-exports", "javafx.base/com.sun.javafx.event=com.jfoenix",
+        "--add-exports", "javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+        "--add-exports", "javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
         "--add-opens", "com.google.gson/com.google.gson.internal=io.sentry",
         "--add-opens", "java.base/java.lang.reflect=com.jfoenix",
         "--add-opens", "com.crschnick.pdx_unlimiter.core/com.crschnick.pdx_unlimiter.core.info=com.fasterxml.jackson.databind",
